--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -240,6 +240,7 @@
 .half {
     #arrowLeft{
         position: absolute;
+        display: none;
         top: 65vh;
         left: 0;
         background-color: rgba(0, 0, 0, 0.411);
@@ -256,6 +257,7 @@
     }
     #arrowRight{
         position: absolute;
+        display: none;
         top: 65vh;
         right: 0;
         background-color: rgba(0, 0, 0, 0.411);
@@ -397,13 +399,16 @@
 }
 
 .section {
-    .quick-signUp {
-        height: 80vh;
+    .shop {
+        height: 100vh;
         width: 100%;
     }
-    position: relative;
+    .prod{
+        width: 100%;
+        height: 75vh;
+    }
     footer {
-        height: 20vh;
+        height: 15vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -600,6 +605,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
+    
     .smallbox {
         display: none;
     }
