--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -188,7 +188,7 @@ body {
 }
 
 .typeBanner4 {
-	background-image: url(../img/playBanner.jpg);
+	background-image: url(../img/playCatBanner.jpg);
 }
 
 .typeBanner a {
