--- a/sass/respond/_indexMedium.scss
+++ b/sass/respond/_indexMedium.scss
@@ -102,6 +102,9 @@
             display: inline-block;
             align-items: center;
         }
+        .ask{
+            display: none;
+        }
         .smallbox {
             display: block;
             margin-top: 60px;
