--- a/sass/respond/_indexSmall.scss
+++ b/sass/respond/_indexSmall.scss
@@ -57,6 +57,9 @@
         //         width: 33.333%;
         //     }
         // }
+        .ask{
+            display: none;
+        }
         .smallbox {
             display: block;
             margin-top: 60px;
