--- a/sass/catContent.scss
+++ b/sass/catContent.scss
@@ -11,7 +11,7 @@
 @import 'mixins/_navNow.scss';
 @import "base/btn";
 @import "base/genderIcon";
-@import "modules/_signUp.scss";
+@import "modules/_signIn.scss";
 @import "modules/_catContent.scss";
 @import 'respond/_catContentMedium.scss';
 @import 'respond/_catContentSmall.scss';
