--- a/sass/catSearch.scss
+++ b/sass/catSearch.scss
@@ -10,7 +10,7 @@
 @import 'mixins/_navNow.scss';
 @import "base/btn";
 @import "base/genderIcon";
-@import "modules/_signUp.scss";
+@import "modules/_signIn.scss";
 @import 'modules/_catSearch.scss';
 @import 'respond/_catSearchMedium.scss';
 @import 'respond/_catSearchSmall.scss';
