--- a/sass/index.scss
+++ b/sass/index.scss
@@ -15,7 +15,7 @@
 @import 'respond/_medium.scss';
 @import 'respond/_desktop.scss';
 @import './modules/_loading.scss';
-@import './modules/_signUp.scss';
+@import './modules/_signIn.scss';
 // rwd
 @import './respond/_headerMedium.scss';
 @import './respond/_headerSmall.scss';
