--- a/sass/modules/_halfway_house_detail.scss
+++ b/sass/modules/_halfway_house_detail.scss
@@ -120,6 +120,9 @@
                 box-shadow: 12px 10px 20px -10px #333;
                 img {
                     width: 100%;
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -131,13 +134,14 @@
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
+        padding-bottom: 50px;
         h2 {
             color: #333;
             font-weight: bold;
             letter-spacing: 15px;
             width: 90%;
             margin: auto;
-            padding: 5%;
+            padding: 4%;
             text-align: center;
             font-size: $font-size-h2;
         }
