--- a/css/Cat_ShoppingStore_food.css
+++ b/css/Cat_ShoppingStore_food.css
@@ -1,8 +1,9 @@
 body{
 	
 	background-color: #eee; 
-	
 	background-image: url(../img/marble.jpg);
+    background-size: cover;
+    background-attachment: fixed;
 
 }
 
