--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -1,5 +1,7 @@
 body {
 	background-image: url(../img/marble.jpg);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 @media only screen and (max-width: 768px) {
@@ -9,7 +11,6 @@ body {
 }
 
 .wrap {
-	
 	margin-left: 200px;
 	line-height: 22px;
 }
@@ -125,13 +126,15 @@ body {
 
 .typeName {
 	float: left;
-	background-color: #fff;
+	/* background-color: #EAAF88; */
+	color: #333;
+	background-color: rgb(253, 223, 203);
 	width: 29%;
 	padding: 4.8%;
 	box-sizing: border-box;
 	text-align: center;
 	margin-right: 1%;
-	font-size: 20px;
+	font-size: 18px;
 }
 
 .typeBanner {
