--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -63,7 +63,8 @@ header {
             color: #d33;
             top: -17px;
             right: -25px;
-            font-family: notoSans_b;
+            font-family: 'Noto Sans TC';
+            font-weight: 700;
         }
         a {
             &:hover {
