--- a/sass/modules/_signIn.scss
+++ b/sass/modules/_signIn.scss
@@ -66,7 +66,8 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
             padding: 10px 50px;
             margin: 0 auto;
             color: #fff;
-            font-family: '../fonts/NotoSansCJKtc-Thin.otf';
+            font-family: 'Noto Sans TC';
+            font-weight: 300;
             label {
                 margin-top: 10px;
                 margin-bottom: 4px;
