--- a/css/catSearch.css
+++ b/css/catSearch.css
@@ -2,6 +2,7 @@
 v2.0 | 20110126
 License: none (public domain)
 */
+@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -40,23 +41,13 @@ table {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box; }
 
-@font-face {
-  font-family: notoSans;
-  src: url("../fonts/NotoSansCJKtc-Thin.otf"); }
-
-@font-face {
-  font-family: notoSans_r;
-  src: url("../fonts/NotoSansCJKtc-Regular.otf"); }
-
-@font-face {
-  font-family: notoSans_b;
-  src: url("../fonts/NotoSansCJKtc-Black.otf"); }
-
 input, select {
-  font-family: notoSans_r; }
+  font-family: 'Noto Sans TC';
+  font-weight: 500; }
 
 body {
-  font-family: notoSans;
+  font-family: 'Noto Sans TC';
+  font-weight: 300;
   letter-spacing: 3px; }
 
 .btns .btn {
@@ -233,7 +224,8 @@ header {
       color: #d33;
       top: -17px;
       right: -25px;
-      font-family: notoSans_b; }
+      font-family: 'Noto Sans TC';
+      font-weight: 700; }
     header .icons a {
       text-decoration: none;
       color: #fff; }
@@ -441,7 +433,8 @@ header.active {
       padding: 10px 50px;
       margin: 0 auto;
       color: #fff;
-      font-family: '../fonts/NotoSansCJKtc-Thin.otf'; }
+      font-family: 'Noto Sans TC';
+      font-weight: 300; }
       .signUpLightbox .formShape form label {
         margin-top: 10px;
         margin-bottom: 4px;
@@ -626,7 +619,7 @@ body {
       .right .container1 .selectForm .advanceSearchItem {
         text-align: left; }
         .right .container1 .selectForm .advanceSearchItem label {
-          font-family: '../fonts/NotoSansCJKtc-Regular.otf'; }
+          font-family: 'Noto Sans TC'; }
       .right .container1 .selectForm .selectTitle {
         font-size: 14px;
         vertical-align: middle; }
@@ -673,7 +666,8 @@ body {
         .right .container1 .selectForm .formInsert .condition {
           padding: 5px 10px;
           border: 1px solid transparent;
-          font-family: '../fonts/NotoSansCJKtc-Thin.otf';
+          font-family: 'Noto Sans TC';
+          font-weight: 500;
           background-color: #fff;
           color: #333;
           line-height: 20px;
@@ -869,7 +863,8 @@ header ul li:nth-child(1) {
 
 header ul li:nth-child(1) a {
   color: #333;
-  font-family: notoSans_r; }
+  font-family: 'Noto Sans TC';
+  font-weight: 700; }
 
 header ul li:nth-child(1):after {
   z-index: -1;
