--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,7 @@
 v2.0 | 20110126
 License: none (public domain)
 */
+@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -40,23 +41,13 @@ table {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box; }
 
-@font-face {
-  font-family: notoSans;
-  src: url("../fonts/NotoSansCJKtc-Thin.otf"); }
-
-@font-face {
-  font-family: notoSans_r;
-  src: url("../fonts/NotoSansCJKtc-Regular.otf"); }
-
-@font-face {
-  font-family: notoSans_b;
-  src: url("../fonts/NotoSansCJKtc-Black.otf"); }
-
 input, select {
-  font-family: notoSans_r; }
+  font-family: 'Noto Sans TC';
+  font-weight: 500; }
 
 body {
-  font-family: notoSans;
+  font-family: 'Noto Sans TC';
+  font-weight: 300;
   letter-spacing: 3px; }
 
 .btns .btn {
