--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 v2.0 | 20110126
 License: none (public domain)
 */
+@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -40,23 +41,13 @@ table {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box; }
 
-@font-face {
-  font-family: notoSans;
-  src: url("../fonts/NotoSansCJKtc-Thin.otf"); }
-
-@font-face {
-  font-family: notoSans_r;
-  src: url("../fonts/NotoSansCJKtc-Regular.otf"); }
-
-@font-face {
-  font-family: notoSans_b;
-  src: url("../fonts/NotoSansCJKtc-Black.otf"); }
-
 input, select {
-  font-family: notoSans_r; }
+  font-family: 'Noto Sans TC';
+  font-weight: 500; }
 
 body {
-  font-family: notoSans;
+  font-family: 'Noto Sans TC';
+  font-weight: 300;
   letter-spacing: 3px; }
 
 .btns .btn {
@@ -308,7 +299,8 @@ header {
       color: #d33;
       top: -17px;
       right: -25px;
-      font-family: notoSans_b; }
+      font-family: 'Noto Sans TC';
+      font-weight: 700; }
     header .icons a {
       text-decoration: none;
       color: #fff; }
@@ -648,7 +640,8 @@ header.active {
     .half .half-text .read-more {
       text-decoration: underline; }
     .half .half-text .half-name {
-      font-family: notoSans_r;
+      font-family: 'Noto Sans TC';
+      font-weight: 500;
       font-size: 18px; }
     .half .half-text span {
       margin: 10px 0;
@@ -710,26 +703,62 @@ header.active {
   align-items: center;
   margin-left: 0; }
 
+.doorLeft {
+  animation: openDoorLeft .8s forwards; }
+
+.doorRight {
+  animation: openDoorRight .8s forwards; }
+
+@keyframes openDoorLeft {
+  to {
+    left: -50%; } }
+
+@keyframes openDoorRight {
+  to {
+    right: -50%; } }
+
+.door-left {
+  position: absolute;
+  width: 50%;
+  height: 100vh;
+  background-color: #111;
+  opacity: 0.7;
+  top: 0;
+  left: 0;
+  z-index: 999; }
+
+.door-right {
+  position: absolute;
+  width: 50%;
+  height: 100vh;
+  background-color: #111;
+  opacity: 0.7;
+  top: 0;
+  right: 0;
+  z-index: 999; }
+
+.door-start {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: #EAAF88;
+  position: absolute;
+  top: calc(50% - 100px);
+  left: calc(50% - 100px);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  text-align: center;
+  cursor: pointer; }
+
 .game-point {
   height: 90vh;
   background-image: url(../../images/background_up.png);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative; }
-  .game-point .door-left {
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    background-color: #000;
-    opacity: 0.6;
-    top: 0; }
-  .game-point .door-right {
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    background-color: #000;
-    opacity: 0.6;
-    top: 0; }
   .game-point .game-point-title {
     height: 15vh;
     display: flex;
@@ -996,7 +1025,8 @@ header.active {
       padding: 10px 50px;
       margin: 0 auto;
       color: #fff;
-      font-family: '../fonts/NotoSansCJKtc-Thin.otf'; }
+      font-family: 'Noto Sans TC';
+      font-weight: 300; }
       .signUpLightbox .formShape form label {
         margin-top: 10px;
         margin-bottom: 4px;
