--- a/sass/modules/_backHeader.scss
+++ b/sass/modules/_backHeader.scss
@@ -64,7 +64,8 @@ header{
             color: #d33;
             top: -17px;
             right: -25px;
-            font-family: notoSans_b;
+            font-family: 'Noto Sans TC';
+            font-weight: 900;
         }
         a{
             &:hover{
