遊戲背景圖片路徑變更

--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -478,7 +478,7 @@
 
 .game-point {
     height: 90vh;
-    background-image: url(../../images/background_up.png);
+    background-image: url(../images/background_up.png);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -655,7 +655,7 @@
 
 .game-point-bgimg {
     height: 10vh;
-    background-image: url(../../images/background_down.png);
+    background-image: url(../images/background_down.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
