--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -13,7 +13,7 @@
 // }
 input,select{
     font-family: 'Noto Sans TC';
-    font-weight: 500;
+    font-weight: bolder;
 }
 body{
     font-family: 'Noto Sans TC';
