--- a/css/backHalfway.css
+++ b/css/backHalfway.css
@@ -43,7 +43,7 @@ table {
 
 input, select {
   font-family: 'Noto Sans TC';
-  font-weight: 500; }
+  font-weight: bolder; }
 
 body {
   font-family: 'Noto Sans TC';
