--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -43,7 +43,7 @@ table {
 
 input, select {
   font-family: 'Noto Sans TC';
-  font-weight: 500; }
+  font-weight: bolder; }
 
 body {
   font-family: 'Noto Sans TC';
@@ -304,10 +304,11 @@ footer {
     width: 100%; } }
 
 @media all and (max-width: 767px) {
-  footer {
+  .section footer {
     margin-left: 0;
-    width: 100%; }
-    footer span {
+    width: 100%;
+    height: 20vh; }
+    .section footer span {
       display: block;
       text-align: center; } }
 
