--- a/sass/respond/_footerSmall.scss
+++ b/sass/respond/_footerSmall.scss
@@ -1,16 +1,20 @@
-@include respond-to(medium){
-    footer{
+@include respond-to(medium) {
+    footer {
         margin-left: 0;
         width: 100%;
     }
 }
+
 @include respond-to(small) {
-    footer {
-        margin-left: 0;
-        width: 100%;
-        span {
-            display: block;
-            text-align: center;
+    .section {
+        footer {
+            margin-left: 0;
+            width: 100%;
+            height: 20vh;
+            span {
+                display: block;
+                text-align: center;
+            }
         }
     }
 }
