--- a/css/index.css
+++ b/css/index.css
@@ -638,12 +638,18 @@ header.active {
       margin: 10px 0; }
       .half .half-text a:hover {
         color: #EAAF88; }
+    .half .half-text a.read-more {
+      width: 100%;
+      text-align: right;
+      display: block; }
     .half .half-text .read-more {
       text-decoration: underline; }
     .half .half-text .half-name {
       font-family: 'Noto Sans TC';
       font-weight: 500;
-      font-size: 18px; }
+      font-size: 18px;
+      margin-bottom: 10px;
+      display: block; }
     .half .half-text span {
       margin: 10px 0;
       display: block; }
@@ -651,7 +657,9 @@ header.active {
 .shop {
   height: 100vh;
   overflow: hidden;
-  background-image: url(../images/wood.jpg); }
+  background-image: url(../images/wood.jpg);
+  background-repeat: no-repeat;
+  background-size: cover; }
   .shop .container {
     text-align: center;
     display: flex;
@@ -675,27 +683,9 @@ header.active {
     align-items: center; }
     .shop .shop-title h2 {
       height: 40px; }
-  .shop .prod-list {
-    padding: 60px 40px;
-    background-color: rgba(255, 255, 255, 0.537);
-    border: 2px solid #fff;
-    margin-top: 60px; }
-    .shop .prod-list li {
-      position: relative; }
-      .shop .prod-list li a {
-        text-decoration: none;
-        color: #222;
-        font-weight: bolder;
-        padding: 15px;
-        display: block; }
-
-.shop {
-  height: 100vh;
-  width: 100%; }
-
-.prod {
-  width: 100%;
-  height: 75vh; }
+  .shop .prod {
+    width: 100%;
+    height: 75vh; }
 
 footer {
   height: 15vh;
@@ -854,8 +844,8 @@ footer {
     .game-point .game-point-bottom .people {
       position: relative;
       z-index: 2;
-      width: 70px;
-      height: 108x;
+      width: 80px;
+      height: 102x;
       left: 0;
       bottom: 0;
       transition: .3s; }
