--- a/sass/modules/_halfway_house_detail.scss
+++ b/sass/modules/_halfway_house_detail.scss
@@ -44,7 +44,7 @@
             .bigpic {
                 width: 80%;
                 margin-top: 50px;
-                background-image: url(../images/halfdetail1.jpg);
+                // background-image: url(../images/halfdetail1.jpg);
                 background-size: 100%;
                 background-repeat: no-repeat;
             }
