--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -205,23 +205,24 @@ header {
         transition: .3s; }
 
 .hb {
-  position: fixed;
+  position: absolute;
   z-index: 999999999;
-  background-color: rgba(238, 237, 237, 0.808);
+  background-color: #eaaf88;
   padding: 2px 5px;
-  border-radius: 5px;
+  border-radius: 0 0 10px 10px;
   display: none;
-  top: 30px;
-  right: 30px; }
+  bottom: -68px;
+  right: 0;
+  padding: 15px 10px 10px 10px; }
 
 header.active {
-  top: 0;
+  transform: translateY(0);
   transition: .6s; }
 
 .hamburger .line {
   width: 40px;
   height: 4px;
-  background-color: #2c3e50;
+  background-color: #ffffff;
   display: block;
   margin: 8px auto;
   -webkit-transition: all 0.3s ease-in-out;
